# vision-api

./: .gitignore  Dockerfile.cpu  Dockerfile.cu118  Dockerfile.cu121  Dockerfile.cu122  Dockerfile.cu124  Dockerfile.prebaked  makefile  pyproject.toml  requirements.api.txt  requirements.cpu.txt  requirements.cu118.txt  requirements.cu121.txt  requirements.cu122.txt  requirements.cu124.txt  server.py
